 /* $Id: ChangeLog,v 1.656 2000-01-17 17:19:44 sandervl Exp $ */

 2000-01-17: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32\NEW: Added basic support for DInput WM_CHAR notification
                      (the rest needs to be done in dinput.dll)
                      Use KEYBOARD_Enable user32 export to (un)register WM_CHAR
                      handler. (WNDPROC type) It's called when a WM_CHAR message
                      arrives for an Odin window with hwnd, msg, wParam & lParam.
	- DINPUT:     Fixed bugs reported by Michal Necasek

 2000-01-16: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32/NEW: implemented sysmenu commands: SC_SIZE and SC_TASKLIST
		      fixed WM_MOVE
		      changed HTCAPTION system menu position
		      changed maximized window position
		      don't move/size maximized windows

 2000-01-15: Jens Wiessner <wiessnej@rfi.de>
	- TWAIN_32: Update
	- WINMM\MCIANIM,MCIAVI32,MCISEQ,MCIWAVE,MIDIMAP
                    Updated to Wine level 20000109 + corrected compile errors
	- WINMM: Ported Wine wave mapper.

 2000-01-15: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32\NEW: Fixed scroll repaints (never use GetMessage with window
                      handle as that can prevent WM_PAINTs from being dispatched)
                      (may need reworking of Get/PeekMessage instead)
                      ScrollWindow changes
                      Removed frame drawing 'bugfix'.
                      Fixed system menu position for child windows (i.e. MDI)
                      Fixed titlebar tracking for child windows (i.e. MDI)
	- KERNEL32:   Check for null pointers in lstrcmpA

 2000-01-15: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32/NEW: cache menu and caption drawing
		      changed minimize button position
		      don't redraw system menu icon in menu.cpp
		      hilighted menubar items don't have an edge in Win9x
		      don't open system menu on mouseover if menubar is used and vice versa